wrapping bug

--- a/style.css
+++ b/style.css
@@ -29,5 +29,5 @@ body {
 }
 
 .value {
-  white-space:pre;
+  white-space:pre-wrap;
 }
